compatibility with newest centrex-tlf version and independent background fields

--- a/examples/SPA/Experimental verification/Naive SPA - J = 0 to 1.ipynb
+++ b/examples/SPA/Experimental verification/Naive SPA - J = 0 to 1.ipynb
@@ -970,7 +970,7 @@
     "    Rini: np.ndarray,\n",
     "    Vini: np.ndarray,\n",
     "    initial_state_idx: int,\n",
-    "    target_state: centrex_tlf.State,\n",
+    "    target_state: centrex_tlf.states.CoupledState,\n",
     "    save_path: Path = None,\n",
     "    N_steps=10000,\n",
     "):\n",
