--- a/examples/SPA/Experimental verification/SPA2 - parameter scans- with imperfect SPA1.ipynb
+++ b/examples/SPA/Experimental verification/SPA2 - parameter scans- with imperfect SPA1.ipynb
@@ -687,7 +687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_simulation(power: float, detuning: float, R0: np.ndarray, Rini:np.ndarray, Vini: np.ndarray, J1_state: centrex_tlf.State, target_state: centrex_tlf.State, save_path: Path = None, N_steps = 10000):\n",
+    "def run_simulation(power: float, detuning: float, R0: np.ndarray, Rini:np.ndarray, Vini: np.ndarray, J1_state: centrex_tlf.states.CoupledState, target_state: centrex_tlf.states.CoupledState, save_path: Path = None, N_steps = 10000):\n",
     "    \"\"\"\n",
     "    Runs the simulation for one value of power and finds the probability of ending up in the target state.\n",
     "    \"\"\"\n",
