--- a/examples/SPA/Experimental verification/State evolution for experimental testing of SPA - J = 1 - no shield.ipynb
+++ b/examples/SPA/Experimental verification/State evolution for experimental testing of SPA - J = 1 - no shield.ipynb
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prob_F(state: centrex_tlf.State, F: float) -> float:\n",
+    "def prob_F(state: centrex_tlf.states.CoupledState, F: float) -> float:\n",
     "    \"\"\"\n",
     "    Calculates probability that molecule is found in state with given F.\n",
     "    \"\"\"\n",
