--- a/examples/SPB/SPB adiabatic passage to J1_pmp - polarization purity.ipynb
+++ b/examples/SPB/SPB adiabatic passage to J1_pmp - polarization purity.ipynb
@@ -547,7 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_simulation(power: float, detuning: float, R0: np.ndarray, Rini:np.ndarray, Vini: np.ndarray, initial_state: centrex_tlf.State, target_state: centrex_tlf.State, r: float, phi:float, save_path: Path = None, N_steps = 10000):\n",
+    "def run_simulation(power: float, detuning: float, R0: np.ndarray, Rini:np.ndarray, Vini: np.ndarray, initial_state: centrex_tlf.states.CoupledState, target_state: centrex_tlf.states.CoupledState, r: float, phi:float, save_path: Path = None, N_steps = 10000):\n",
     "    \"\"\"\n",
     "    Runs the simulation for one value of power and finds the probability of ending up in the target state.\n",
     "    \"\"\"\n",
